# final-challenge

./: README.md  docker-compose.yaml  pyproject.toml
src/: config.py  database.py  dependencies.py  exceptions.py  main.py  utils.py
src/catalogs/: controllers.py  exceptions.py  models.py  schemas.py  views.py
src/orders/: controllers.py  exceptions.py  models.py  schemas.py  views.py
src/users/: controllers.py  exceptions.py  models.py  schemas.py  views.py
